k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: ecommerce-frontend
        image: ecommerceacrprod.azurecr.io/ecommerce-frontend:8bcea7d82ee6732c9d8e74590482950e105819b1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
